crates/connectors/ndc-citus/tests/snapshots/query_tests__sorting__select_order_by_name.snap
---
source: crates/connectors/ndc-citus/tests/query_tests.rs
expression: result
---
[
  {
    "rows": [
      {
        "Title": "Achtung Baby"
      },
      {
        "Title": "A Copland Celebration, Vol. I"
      },
      {
        "Title": "Acústico"
      },
      {
        "Title": "Acústico MTV"
      },
      {
        "Title": "Acústico MTV [Live]"
      }
    ]
  }
]
