crates/connectors/ndc-citus/tests/snapshots/query_tests__sorting__sorting_by_nested_relationship_column_with_predicate.snap
---
source: crates/connectors/ndc-citus/tests/query_tests.rs
expression: result
---
[
  {
    "rows": [
      {
        "Name": "Crazy Train"
      },
      {
        "Name": "I Don't Know"
      }
    ]
  }
]
